simple dashboard and all borrowers page

--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -18,7 +18,7 @@
                     <div class="my-auto col-md-7">
                       <h1 class="m-0">${Mext.joinedProjects.length}</h1>
                       <p class="m-0 text-muted">
-                        Dự án đã tham gia
+                        Total borrowers
                       </p>
                     </div>
                     <div class="my-auto text-md-right col-md-5">
@@ -40,7 +40,7 @@
                     <div class="my-auto col-md-7">
                       <h1 class="m-0">0</h1>
                       <p class="m-0 text-muted">
-                        Lỗi được xác nhận
+                        Total borrowed books
                       </p>
                     </div>
                     <div class="my-auto text-md-right col-md-5">
@@ -62,7 +62,7 @@
                     <div class="my-auto col-md-7">
                       <h1 class="m-0">0</h1>
                       <p class="m-0 text-muted">
-                        Bounty nhận được
+                        Total books
                       </p>
                     </div>
                     <div class="my-auto text-md-right col-md-5">
@@ -81,7 +81,7 @@
               <div class="card m-b-30">
 
                 <div class="card-header">
-                  <div class="card-title">Dự án tham gia</div>
+                  <div class="card-title">New borrowers</div>
                 </div>
 
                 <div class="list-group list-group-flush">
