--- a/src/pages/borrowers/list-borrowers.f7.html
+++ b/src/pages/borrowers/list-borrowers.f7.html
@@ -7,10 +7,10 @@
                         <div class="card m-b-30">
                             <div class="card-header">
                                 <h5 class="m-b-0">
-                                    Quản lí dự án
+                                    All borrowers
                                 </h5>
                                 <div class="card-controls">
-                                    <a href="/manage/projects/create/" class="btn btn-info">Tạo dự án mới</a>
+                                    <a href="/borrowers/add/" class="btn btn-info">Add borrower</a>
                                 </div>
                             </div>
                             <div class="card-body">
@@ -19,35 +19,36 @@
                                         <thead>
                                         <tr>
                                             <th>ID</th>
-                                            <th>Tên</th>
-                                            <th>Nền tảng</th>
-                                            <th>Lựa chọn</th>
+                                            <th>Name</th>
+                                            <th>Class</th>
+                                            <th>Student ID</th>
+                                            <th>Borrowed books</th>
+                                            <th>Borrowed date</th>
+                                            <th>Expiration date</th>
                                         </tr>
                                         </thead>
                                         <tbody>
-                                        ${allProjects.map(project => $h`
                                         <tr>
-                                            <td>${project.id}</td>
-                                            <td>${project.title}</td>
-                                            <td>${project.platform}</td>
+                                            <td>1</td>
+                                            <td>Nguyễn Duy Bảo</td>
+                                            <td>12 Tin</td>
+                                            <td>180045Ti</td>
+                                            <td>2</td>
+                                            <td>20h06 - 20/06/2021</td>
+                                            <td>20h06 - 27/06/2021</td>
                                             <td>
-                                                <a href="/manage/projects/${project.id}/edit/"
+                                                <a href="/borrowers/info/1/"
                                                    class="btn btn-info projects" role="button">
                                                     <i class="mdi mdi-pencil-outline"></i>
                                                 </a>
-                                                <a href="/manage/projects/${project.id}/participants/"
-                                                   class="btn btn-outline-info projects">
-                                                    <i class="mdi mdi-view-list"></i>
-                                                </a>
-                                                <button @click="${deleteProject}" type="button" class="btn btn-danger"
+                                                <button @click="${deleteProject}" type="button" class="btn btn-success"
                                                         data-toggle="modal" data-target="#deleteProject"
-                                                        data-id="${project.id}">
-                                                    <i class="mdi mdi-delete"></i>
+                                                        data-id="1">
+                                                    <i class="mdi mdi-check"></i>
                                                 </button>
 
                                             </td>
                                         </tr>
-                                        `)}
                                         </tbody>
                                     </table>
                                 </div>
@@ -71,16 +72,16 @@
 		let allProjects = [];
 
 		const resetList = (e) => {
-            Mext.api("get_all_projects").then(response => {
-                allProjects = response.data;
-                $update();
-            });
-        }
+			Mext.api("get_all_projects").then(response => {
+				allProjects = response.data;
+				$update();
+			});
+		}
 
-        resetList();
+		resetList();
 
 		const deleteProject = (e) => {
-            let projectID = e.currentTarget.dataset.id;
+			let projectID = e.currentTarget.dataset.id;
 
 			Mext.openConfirmModal('deleteProject').then(isConfirmed => {
 				if (!isConfirmed) return;
