add borrower page and custom aside page

--- a/src/pages/aside.f7.html
+++ b/src/pages/aside.f7.html
@@ -1,7 +1,7 @@
 <template>
     <div class="page js-scrollbar" style="background: #212841">
         <ul class="menu">
-            <li class="menu-item ">
+            <li class="menu-item">
                 <a href="/" data-view="#view-main" class="menu-link">
                     <span class="menu-label">
                         <span class="menu-name">Overview</span>
@@ -33,17 +33,17 @@
                                 <span class="menu-name">All borrowers</span>
                             </span>
                             <span class="menu-icon">
-                                <i class="icon-placeholder mdi mdi-shape-circle-plus "></i>
+                                <i class="icon-placeholder mdi mdi-shape-circle-plus"></i>
                             </span>
                         </a>
                     </li>
                     <li class="menu-item">
-                        <a href="/borrowers/add" data-view="#view-main" class="menu-link">
+                        <a href="/borrowers/add/" data-view="#view-main" class="menu-link">
                             <span class="menu-label">
                                 <span class="menu-name">Add borrower</span>
                             </span>
                             <span class="menu-icon">
-                                <i class="icon-placeholder mdi mdi-shape-circle-plus "></i>
+                                <i class="icon-placeholder mdi mdi-shape-circle-plus"></i>
                             </span>
                         </a>
                     </li>
@@ -58,7 +58,7 @@
                         </span>
                     </span>
                     <span class="menu-icon">
-                        <i class="icon-placeholder mdi mdi-information-outline "></i>
+                        <i class="icon-placeholder mdi mdi-information-outline"></i>
                     </span>
                 </a>
                 <!--submenu-->
@@ -95,13 +95,13 @@
                     </li>
                 </ul>
             </li>
-            <li class="menu-item ">
+            <li class="menu-item">
                 <a href="/about/" data-view="#view-main" class="menu-link">
                     <span class="menu-label">
                         <span class="menu-name">About</span>
                     </span>
                     <span class="menu-icon">
-                        <i class="icon-placeholder mdi mdi-information-outline "></i>
+                        <i class="icon-placeholder mdi mdi-information-outline"></i>
                     </span>
                 </a>
             </li>
