--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -5,7 +5,7 @@
 				<!-- begin sidebar branding-->
 				<img class="admin-brand-logo" src="assets/img/logo.png" width="40" alt="atmos Logo"/>
 				<span class="admin-brand-content font-secondary">
-					<a href="/" data-view="#view-main" style="color: white">MTOOLKIT</a>
+					<a href="/" data-view="#view-main" style="color: white">CBH Lib Manager</a>
 				</span>
 				<!-- end sidebar branding-->
 				<div class="ml-auto">
@@ -28,14 +28,14 @@
 					<ul class="nav align-items-center">
 
 						<li class="nav-item">
-							<a class="nav-link  " data-target="#siteSearchModal" data-toggle="modal" href="#">
+							<a class="nav-link" data-target="#siteSearchModal" data-toggle="modal" href="#">
 								<i class=" mdi mdi-magnify mdi-24px align-middle"></i>
 							</a>
 						</li>
 					</ul>
 				</nav>
 
-				<nav class=" ml-auto">
+				<nav class="ml-auto">
 					<ul class="nav align-items-center">
 						<li class="nav-item dropdown ">
 							<a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
@@ -44,11 +44,11 @@
 									<img src="${Mext.isBooted ? avatarUrl : avatarSample}" class="avatar-img rounded-circle bg-dark"/>
 								</div>
 							</a>
-							<div class="dropdown-menu  dropdown-menu-right">
-								<a class="dropdown-item" data-view="#view-main" href="/account/"> Tài khoản</a>
-								<a class="dropdown-item" data-view="#view-main" href="/account/change-password/"> Đổi mật khẩu</a>
+							<div class="dropdown-menu dropdown-menu-right">
+								<a class="dropdown-item" data-view="#view-main" href="/account/">Tài khoản</a>
+								<a class="dropdown-item" data-view="#view-main" href="/account/change-password/">Đổi mật khẩu</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#" @click="${logout}"> Đăng xuất</a>
+								<a class="dropdown-item" href="#" @click="${logout}">Đăng xuất</a>
 							</div>
 						</li>
 
