--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
   <meta name="theme-color" content="#007aff">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
-  <title>MonokaiToolkit Extension</title>
-  
+  <title>CBH Lib Manager</title>
+
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="icon" type="image/x-icon" href="assets/img/logo.png"/>
@@ -25,13 +25,13 @@
   <script src="assets/vendor/pace/pace.min.js"></script>
   <!--vendors-->
   <link href="https://fonts.googleapis.com/css?family=Hind+Vadodara:400,500,600" rel="stylesheet">
-  
-  
+
+
   <!-- built styles file will be auto injected -->
 </head>
 <body class="sidebar-pinned page-home">
   <div id="app"></div>
-  
+
   <!-- built script files will be auto injected -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/jquery-ui/jquery-ui.min.js"></script>
@@ -52,5 +52,7 @@
   <script src="assets/vendor/apexchart/apexcharts.min.js"></script>
   <script src="assets/vendor/DataTables/datatables.min.js"></script>
   <script src="assets/vendor/summernote/summernote-bs4.min.js"></script>
+  <script src="assets/vendor/datedropper/datedropper.min.js"></script>
+  <script src="assets/vendor/timepicker/bootstrap-timepicker.min.js"></script>
 </body>
 </html>
