--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -16,9 +16,9 @@
                 <div class="card-body">
                   <div class="row p-t-20 p-b-20">
                     <div class="my-auto col-md-7">
-                      <h1 class="m-0">${Mext.joinedProjects.length}</h1>
+                      <h1 class="m-0">26</h1>
                       <p class="m-0 text-muted">
-                        Total borrowers
+                        Số người mượn sách
                       </p>
                     </div>
                     <div class="my-auto text-md-right col-md-5">
@@ -38,9 +38,9 @@
                 <div class="card-body">
                   <div class="row p-t-20 p-b-20">
                     <div class="my-auto col-md-7">
-                      <h1 class="m-0">0</h1>
+                      <h1 class="m-0">102</h1>
                       <p class="m-0 text-muted">
-                        Total borrowed books
+                        Số sách đã mượn
                       </p>
                     </div>
                     <div class="my-auto text-md-right col-md-5">
@@ -60,9 +60,9 @@
                 <div class="card-body">
                   <div class="row p-t-20 p-b-20">
                     <div class="my-auto col-md-7">
-                      <h1 class="m-0">0</h1>
+                      <h1 class="m-0">345</h1>
                       <p class="m-0 text-muted">
-                        Total books
+                        Tổng số sách
                       </p>
                     </div>
                     <div class="my-auto text-md-right col-md-5">
@@ -81,7 +81,7 @@
               <div class="card m-b-30">
 
                 <div class="card-header">
-                  <div class="card-title">New borrowers</div>
+                  <div class="card-title">Người mượn mới</div>
                 </div>
 
                 <div class="list-group list-group-flush">
@@ -106,7 +106,7 @@
                 </div>
                 ${joinedProjects.length == 0 && $h`
                 <div class="card-body">
-                  <p>Hiện tại bạn chưa tham gia dự án nào!</p>
+                  <p>Hiện tại chưa có người mượn mới!</p>
                 </div>
                 `}
               </div>
