--- a/src/pages/aside.f7.html
+++ b/src/pages/aside.f7.html
@@ -4,7 +4,7 @@
             <li class="menu-item">
                 <a href="/" data-view="#view-main" class="menu-link">
                     <span class="menu-label">
-                        <span class="menu-name">Overview</span>
+                        <span class="menu-name">Tổng quan</span>
                     </span>
                     <span class="menu-icon">
                         <span class="icon-badge badge-success badge badge-pill">4</span>
@@ -16,7 +16,7 @@
                 <a href="#" class="open-dropdown menu-link">
                     <span class="menu-label">
                         <span class="menu-name">
-                            Borrowers
+                            Quản lý người mượn
                             <span class="menu-arrow"></span>
                         </span>
                     </span>
@@ -30,7 +30,7 @@
                     <li class="menu-item">
                         <a href="/borrowers/" data-view="#view-main" class="menu-link">
                             <span class="menu-label">
-                                <span class="menu-name">All borrowers</span>
+                                <span class="menu-name">Tất cả người mượn</span>
                             </span>
                             <span class="menu-icon">
                                 <i class="icon-placeholder mdi mdi-shape-circle-plus"></i>
@@ -40,7 +40,7 @@
                     <li class="menu-item">
                         <a href="/borrowers/add/" data-view="#view-main" class="menu-link">
                             <span class="menu-label">
-                                <span class="menu-name">Add borrower</span>
+                                <span class="menu-name">Thêm người mượn</span>
                             </span>
                             <span class="menu-icon">
                                 <i class="icon-placeholder mdi mdi-shape-circle-plus"></i>
@@ -53,7 +53,7 @@
                 <a href="#" class="open-dropdown menu-link">
                     <span class="menu-label">
                         <span class="menu-name">
-                            Books
+                            Quản lý sách
                             <span class="menu-arrow"></span>
                         </span>
                     </span>
@@ -66,7 +66,7 @@
                     <li class="menu-item">
                         <a href="/books/" data-view="#view-main" class="menu-link">
                             <span class="menu-label">
-                                <span class="menu-name">All books</span>
+                                <span class="menu-name">Tất cả sách</span>
                             </span>
                             <span class="menu-icon">
                                 <i class="icon-placeholder mdi mdi-toolbox-outline"></i>
@@ -76,7 +76,7 @@
                     <li class="menu-item">
                         <a href="/books/add/" data-view="#view-main" class="menu-link">
                             <span class="menu-label">
-                                <span class="menu-name">Add book</span>
+                                <span class="menu-name">Thêm sách</span>
                             </span>
                             <span class="menu-icon">
                                 <i class="icon-placeholder mdi mdi-toolbox-outline"></i>
@@ -86,7 +86,7 @@
                     <li class="menu-item">
                         <a href="/books/available/" data-view="#view-main" class="menu-link">
                             <span class="menu-label">
-                                <span class="menu-name">Available books</span>
+                                <span class="menu-name">Sách có thể mượn</span>
                             </span>
                             <span class="menu-icon">
                                 <i class="icon-placeholder mdi mdi-toolbox-outline"></i>
