--- a/src/pages/borrowers/list-borrowers.f7.html
+++ b/src/pages/borrowers/list-borrowers.f7.html
@@ -7,10 +7,10 @@
                         <div class="card m-b-30">
                             <div class="card-header">
                                 <h5 class="m-b-0">
-                                    All borrowers
+                                    Tất cả người mượn
                                 </h5>
                                 <div class="card-controls">
-                                    <a href="/borrowers/add/" class="btn btn-info">Add borrower</a>
+                                    <a href="/borrowers/add/" class="btn btn-info">Thêm người mượn</a>
                                 </div>
                             </div>
                             <div class="card-body">
@@ -19,12 +19,12 @@
                                         <thead>
                                         <tr>
                                             <th>ID</th>
-                                            <th>Name</th>
-                                            <th>Class</th>
-                                            <th>Student ID</th>
-                                            <th>Borrowed books</th>
-                                            <th>Borrowed date</th>
-                                            <th>Expiration date</th>
+                                            <th>Tên</th>
+                                            <th>Lớp</th>
+                                            <th>Mã học sinh</th>
+                                            <th>Số sách</th>
+                                            <th>Ngày mượn</th>
+                                            <th>Ngày hết hạn</th>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -37,9 +37,48 @@
                                             <td>20h06 - 20/06/2021</td>
                                             <td>20h06 - 27/06/2021</td>
                                             <td>
-                                                <a href="/borrowers/info/1/"
-                                                   class="btn btn-info projects" role="button">
-                                                    <i class="mdi mdi-pencil-outline"></i>
+                                                <a href="/borrowers/info/1/" class="btn btn-info projects" role="button">
+                                                    <i class="mdi mdi-menu"></i>
+                                                </a>
+                                                <button @click="${deleteProject}" type="button" class="btn btn-success"
+                                                        data-toggle="modal" data-target="#deleteProject"
+                                                        data-id="1">
+                                                    <i class="mdi mdi-check"></i>
+                                                </button>
+
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>Nguyễn Duy Bảo</td>
+                                            <td>12 Tin</td>
+                                            <td>180045Ti</td>
+                                            <td>2</td>
+                                            <td>20h06 - 20/06/2021</td>
+                                            <td>20h06 - 27/06/2021</td>
+                                            <td>
+                                                <a href="/borrowers/info/1/" class="btn btn-info projects" role="button">
+                                                    <i class="mdi mdi-menu"></i>
+                                                </a>
+                                                <button @click="${deleteProject}" type="button" class="btn btn-success"
+                                                        data-toggle="modal" data-target="#deleteProject"
+                                                        data-id="1">
+                                                    <i class="mdi mdi-check"></i>
+                                                </button>
+
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>3</td>
+                                            <td>Nguyễn Duy Bảo</td>
+                                            <td>12 Tin</td>
+                                            <td>180045Ti</td>
+                                            <td>2</td>
+                                            <td>20h06 - 20/06/2021</td>
+                                            <td>20h06 - 27/06/2021</td>
+                                            <td>
+                                                <a href="/borrowers/info/1/" class="btn btn-info projects" role="button">
+                                                    <i class="mdi mdi-menu"></i>
                                                 </a>
                                                 <button @click="${deleteProject}" type="button" class="btn btn-success"
                                                         data-toggle="modal" data-target="#deleteProject"
