--- a/src/pages/books/available-books.f7.html
+++ b/src/pages/books/available-books.f7.html
@@ -22,20 +22,24 @@
                                             <th>Tên sách</th>
                                             <th>Tác giả</th>
                                             <th>Mã sách</th>
-                                            <th>Tổng số sách</th>
-                                            <th>Số sách còn</th>
+                                            <th>Vị trí</th>
+                                            <th>Giá tiền</th>
+                                            <th>Ngày nhập</th>
+                                            <th>Người nhập</th>
                                         </tr>
                                         </thead>
                                         <tbody>
                                         <tr>
                                             <td>1</td>
-                                            <td>Ngồi khóc trên cây</td>
+                                            <td>Còn chút gì để nhớ</td>
                                             <td>Nguyễn Nhật Ánh</td>
                                             <td>CBH-206</td>
-                                            <td>3</td>
-                                            <td>1</td>
+                                            <td>T1-N2</td>
+                                            <td>60000 đ</td>
+                                            <td>20/06/2021</td>
+                                            <td>Bảo</td>
                                             <td>
-                                                <a href="/borrowers/info/1/" class="btn btn-info projects" role="button">
+                                                <a href="/books/info/1/" class="btn btn-info projects" role="button">
                                                     <i class="mdi mdi-menu"></i>
                                                 </a>
                                                 <button @click="${deleteProject}" type="button" class="btn btn-danger"
