--- a/src/pages/books/book-info.f7.html
+++ b/src/pages/books/book-info.f7.html
@@ -27,8 +27,11 @@
                                             <th>Tên sách</th>
                                             <th>Tác giả</th>
                                             <th>Mã sách</th>
-                                            <th>Thời điểm nhập</th>
-                                            <th>Trạng thái</th>
+                                            <th>Vị trí</th>
+                                            <th>Giá tiền</th>
+                                            <th>Ngày nhập</th>
+                                            <th>Người nhập</th>
+                                            <th>Tình trạng</th>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -37,50 +40,14 @@
                                             <td>Còn chút gì để nhớ</td>
                                             <td>Nguyễn Nhật Ánh</td>
                                             <td>CBH-206</td>
-                                            <td>03/05/2021</td>
-                                            <td>Đã mượn</td>
-                                            <td>
-                                                <button type="button" class="btn btn-danger">
-                                                    <i class="mdi mdi-delete"></i>
-                                                </button>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>Còn chút gì để nhớ</td>
-                                            <td>Nguyễn Nhật Ánh</td>
-                                            <td>CBH-206</td>
+                                            <td>T1-N2</td>
+                                            <td>60000 đ</td>
                                             <td>20/06/2021</td>
+                                            <td>Bảo</td>
                                             <td>Đã mượn</td>
-                                            <td>
-                                                <button type="button" class="btn btn-danger">
-                                                    <i class="mdi mdi-delete"></i>
-                                                </button>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>Còn chút gì để nhớ</td>
-                                            <td>Nguyễn Nhật Ánh</td>
-                                            <td>CBH-206</td>
-                                            <td>31/12/2021</td>
-                                            <td>Còn sách</td>
-                                            <td>
-                                                <button type="button" class="btn btn-danger">
-                                                    <i class="mdi mdi-delete"></i>
-                                                </button>
-                                                <button type="button" class="btn btn-success">
-                                                    <i class="mdi mdi-plus"></i>
-                                                </button>
-                                            </td>
                                         </tr>
                                         </tbody>
                                     </table>
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" name="create-project" value="ok" class="btn btn-danger">
-                                        Xoá tất cả
-                                    </button>
                                 </div>
                             </div>
                         </form>
