--- a/src/pages/books/list-books.f7.html
+++ b/src/pages/books/list-books.f7.html
@@ -22,8 +22,10 @@
                                             <th>Tên sách</th>
                                             <th>Tác giả</th>
                                             <th>Mã sách</th>
-                                            <th>Tổng số sách</th>
-                                            <th>Số sách còn</th>
+                                            <th>Vị trí</th>
+                                            <th>Giá tiền</th>
+                                            <th>Ngày nhập</th>
+                                            <th>Người nhập</th>
                                             <th>Tình trạng</th>
                                         </tr>
                                         </thead>
@@ -33,49 +35,11 @@
                                             <td>Còn chút gì để nhớ</td>
                                             <td>Nguyễn Nhật Ánh</td>
                                             <td>CBH-206</td>
-                                            <td>3</td>
-                                            <td>0</td>
-                                            <td>Đã hết</td>
-                                            <td>
-                                                <a href="/books/info/1/" class="btn btn-info projects" role="button">
-                                                    <i class="mdi mdi-menu"></i>
-                                                </a>
-                                                <button @click="${deleteProject}" type="button" class="btn btn-danger"
-                                                        data-toggle="modal" data-target="#deleteProject"
-                                                        data-id="1">
-                                                    <i class="mdi mdi-delete"></i>
-                                                </button>
-
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>Mắt biếc</td>
-                                            <td>Nguyễn Nhật Ánh</td>
-                                            <td>CBH-206</td>
-                                            <td>3</td>
-                                            <td>0</td>
-                                            <td>Đã hết</td>
-                                            <td>
-                                                <a href="/books/info/1/" class="btn btn-info projects" role="button">
-                                                    <i class="mdi mdi-menu"></i>
-                                                </a>
-                                                <button @click="${deleteProject}" type="button" class="btn btn-danger"
-                                                        data-toggle="modal" data-target="#deleteProject"
-                                                        data-id="1">
-                                                    <i class="mdi mdi-delete"></i>
-                                                </button>
-
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>Ngồi khóc trên cây</td>
-                                            <td>Nguyễn Nhật Ánh</td>
-                                            <td>CBH-206</td>
-                                            <td>3</td>
-                                            <td>1</td>
-                                            <td>Còn sách</td>
+                                            <td>T1-N2</td>
+                                            <td>60000 đ</td>
+                                            <td>20/06/2021</td>
+                                            <td>Bảo</td>
+                                            <td>Đã mượn</td>
                                             <td>
                                                 <a href="/books/info/1/" class="btn btn-info projects" role="button">
                                                     <i class="mdi mdi-menu"></i>
