--- a/src/pages/borrowers/list-borrowers.f7.html
+++ b/src/pages/borrowers/list-borrowers.f7.html
@@ -22,9 +22,11 @@
                                             <th>Tên</th>
                                             <th>Lớp</th>
                                             <th>Mã học sinh</th>
+                                            <th>Điện thoại</th>
                                             <th>Số sách</th>
                                             <th>Ngày mượn</th>
                                             <th>Ngày hết hạn</th>
+                                            <th>Phụ trách</th>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -33,59 +35,15 @@
                                             <td>Nguyễn Duy Bảo</td>
                                             <td>12 Tin</td>
                                             <td>180045Ti</td>
+                                            <td>0123456789</td>
                                             <td>2</td>
-                                            <td>20h06 - 20/06/2021</td>
-                                            <td>20h06 - 27/06/2021</td>
+                                            <td>20/06/2021</td>
+                                            <td>27/06/2021</td>
+                                            <td>Bảo</td>
                                             <td>
                                                 <a href="/borrowers/info/1/" class="btn btn-info projects" role="button">
                                                     <i class="mdi mdi-menu"></i>
                                                 </a>
-                                                <button @click="${deleteProject}" type="button" class="btn btn-success"
-                                                        data-toggle="modal" data-target="#deleteProject"
-                                                        data-id="1">
-                                                    <i class="mdi mdi-check"></i>
-                                                </button>
-
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>Nguyễn Duy Bảo</td>
-                                            <td>12 Tin</td>
-                                            <td>180045Ti</td>
-                                            <td>2</td>
-                                            <td>20h06 - 20/06/2021</td>
-                                            <td>20h06 - 27/06/2021</td>
-                                            <td>
-                                                <a href="/borrowers/info/1/" class="btn btn-info projects" role="button">
-                                                    <i class="mdi mdi-menu"></i>
-                                                </a>
-                                                <button @click="${deleteProject}" type="button" class="btn btn-success"
-                                                        data-toggle="modal" data-target="#deleteProject"
-                                                        data-id="1">
-                                                    <i class="mdi mdi-check"></i>
-                                                </button>
-
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>Nguyễn Duy Bảo</td>
-                                            <td>12 Tin</td>
-                                            <td>180045Ti</td>
-                                            <td>2</td>
-                                            <td>20h06 - 20/06/2021</td>
-                                            <td>20h06 - 27/06/2021</td>
-                                            <td>
-                                                <a href="/borrowers/info/1/" class="btn btn-info projects" role="button">
-                                                    <i class="mdi mdi-menu"></i>
-                                                </a>
-                                                <button @click="${deleteProject}" type="button" class="btn btn-success"
-                                                        data-toggle="modal" data-target="#deleteProject"
-                                                        data-id="1">
-                                                    <i class="mdi mdi-check"></i>
-                                                </button>
-
                                             </td>
                                         </tr>
                                         </tbody>
