--- a/src/pages/books/add-book.f7.html
+++ b/src/pages/books/add-book.f7.html
@@ -19,29 +19,28 @@
                                 </div>
                                 `}
                                 <div class="form-group">
-                                    <div class="row">
-                                        <div class="col-4">
-                                            <label for="accountName">Tên sách</label>
-                                            <input type="text" class="form-control" id="accountName" name="account-name"
-                                                   placeholder="Nhập tên sách..."/>
-                                        </div>
-                                        <div class="col-4">
-                                            <label for="accountName">Tác giả</label>
-                                            <input type="text" class="form-control" id="accountName" name="account-name"
-                                                   placeholder="Nhập tác giả..."/>
-                                        </div>
-                                        <div class="col-3">
-                                            <label for="accountName">Mã sách</label>
-                                            <input type="text" class="form-control" id="accountName" name="account-name"
-                                                   placeholder="Nhập mã sách..."/>
-                                        </div>
-                                        <div class="col-1">
-                                            <label for="accountName">_</label>
-                                            <button type="button" class="btn btn-success">
-                                                <i class="mdi mdi-plus"></i>
-                                            </button>
-                                        </div>
-                                    </div>
+                                    <label for="accountName">Tên sách</label>
+                                    <input type="text" class="form-control" id="accountName" name="account-name"
+                                           placeholder="Nhập tên sách..."/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="accountName">Tác giả</label>
+                                    <input type="text" class="form-control" id="accountName" name="account-name"
+                                           placeholder="Nhập tác giả..."/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="accountName">Mã sách</label>
+                                    <input type="text" class="form-control" id="accountName" name="account-name"
+                                           placeholder="Nhập mã sách..."/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="accountName">Giá tiền</label>
+                                    <input type="text" class="form-control" id="accountName" name="account-name"
+                                           placeholder="Nhập giá tiền..."/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="borrowed-time">Ngày nhập</label>
+                                    <input class="form-control datedropper" type="text" id="borrowed-time"/>
                                 </div>
                                 <div class="form-group">
                                     <button type="submit" name="create-project" value="ok" class="btn btn-primary">
